<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reception"
    android:orientation="vertical"
    android:background="@drawable/bagrownd">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="32dp">
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
    <ImageView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/titelreception"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/recep1"
            android:textSize="15dp"
            android:id="@+id/textvo"
            />
        <ImageView
            android:id="@+id/bttspeech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/red"
            android:src="@drawable/ic_play_circle_outline_black_24dp" />
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="15dp"
            android:text="@string/recba1"
            android:textSize="15dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/recep2"
            android:textSize="15dp"
            android:id="@+id/textvo1"
            />
        <ImageView
            android:visibility="invisible"
            android:layout_width="60dp"
            android:layout_height="46dp"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:padding="5dp"
            android:id="@+id/bttspeech1"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="15dp"
        android:text="@string/recban2"
        android:textSize="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginTop="3dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/recep3"
            android:textSize="15dp"
            android:id="@+id/textvo2"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="46dp"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:padding="5dp"
            android:id="@+id/bttspeech2"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="15dp"
        android:text="@string/recban3"
        android:textSize="15dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/recep4"
            android:textSize="15dp"
            android:id="@+id/textvo3"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="46dp"
          android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:padding="5dp"
            android:id="@+id/bttspeech3"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="15dp"
        android:text="@string/recban4"
        android:textSize="15dp" />

</LinearLayout>